--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -288,18 +288,26 @@ action \(a\) approximately optimally (as per optimality parameter
 
 \section{Experiment 1}\label{experiment-1}
 
-In our Experiments, we wanted to look at people's action choices in a
-minimalistic self-directed learning environment with varying goals and
-social contexts. In Experiment 1, we wanted to confirm that participants
-will choose actions based on different goal descriptions, depending on
-whether we highlight learning goal, performance goal, or presentation
-goal. We were interested to see what people will choose to do when no
-goal is specified and they are free to explore. Thus, we asked
-participants to imagine a scenario in which they were expected to act on
-a toy with an uncertain causal mechanism, and we assigned participants
-to different goal conditions: learning goal (i.e.~learn how the toy
-works); performance goal (e.g.~make the toy play music); presentation
-goal (i.e.~impress their boss); and no goal.
+In our experimental paradigms, we wanted to look at people's action
+choices in a minimalistic self-directed learning environment with
+varying goals and social contexts. The task would involve choosing
+between an action that is informative but potentially not immediately
+rewarding, and an action that is certainly immediately rewarding but not
+informative at all. In Experiment 1, we first wanted to confirm that
+participants would choose different actions depending on goals that we
+highlighted. We were also interested to see what people would choose to
+do when no goal is specified and they are free to explore. Importantly,
+participants were limited to making only a single action, which meant
+the opportunity cost for the alternative action was at its highest.
+Thus, participants were asked to imagine that they needed to act on a
+toy with an uncertain causal mechanism, and we assigned participants to
+different goal conditions: learning goal (i.e.~learn how the toy works);
+performance goal (e.g.~make the toy play music); presentation goal
+(i.e.~impress their boss); and no goal. We hypothesized that
+participants would choose an informative action more often in the
+following order of goal conditions (decreasing): learning, no goal,
+performance, and
+presentation\footnote{Our hypothesis and method were pre-registered prior to data collection on the Open Science Framework (https://osf.io/kcjau)}.
 
 \subsection{Method}\label{method}
 
@@ -314,69 +322,117 @@ our final analysis.
 
 \subsubsection{Stimuli and Design}\label{stimuli-and-design}
 
-We presented three different toys that look very similar but each work
-in different ways, and provided instructions for them. The
-``ButtonMusic'' toy instructions were: \emph{``Press the button on the
-right to play music. Pull the handle on the left to turn on the light.
-Doing both produces both effects.''} The ``HandleMusic'' toy instuctions
-were: \emph{``Pull the handle on the left to play music. Press the
-button on the right to turn on the light. Doing both produces both
-effects.''} The ``BothMusicLight'' toy instuctions were: \emph{``Pull
-the handle on the left AND press the button on the right to turn on the
-light and play music at the same time. The button press or handle pull
-on its own doesn't produce any effect.''} Each toy had a label showing
-its name.
+We presented images of three different toys that look very similar but
+each work in different ways, and provided instructions for them (see top
+of Fig. 1 for what the toys looked like). Toy 1 instructions were:
+\emph{``Pull the handle on the left to turn on the light. Press the
+button on the right to play music. Doing both produces both effects at
+the same time.''} Toy 2 instuctions were: \emph{``Pull the handle on the
+left to play music. Press the button on the right to turn on the light.
+Doing both produces both effects at the same time.''} Toy 3 instuctions
+were: \emph{``Pull the handle on the left AND press the button on the
+right to turn on the light and play music at the same time. The button
+press or handle pull on its own doesn't produce any effect.''} Thus,
+doing both button press and handle pull was immediately rewarding but
+uninformative (as it does not disambiguate the causal mechanism in any
+way), whereas either of the single actions was completely
+disambiguating, but was uncertain to produce an immediate outcome. Each
+toy had a label at the front, indicating which action(s) will make the
+toy operate, and with which outcome effect.
 
-We presented a story to the participants that motivated a goal the
-participants must achieve by acting on a given toy. Importantly, the
+We asked participants to act on one of these toys; importantly, the
 given toy was missing its label, such that partcipants could not know
-whether the toy was a ButtonMusic, HandleMusic, or BothMusicLight toy.
-For all the participants, we asked them to imagine that they were a
-children's toy developer and that one day, their boss approached them
-and said: ``That must be one of the new toys that you've been working
-on. But it looks like you forgot to put on the label! Can you figure out
-whether this toy is a ButtonMusic toy, HandleMusic toy, or
-BothMusicLight toy?'' (\emph{learning} condition); ``That must be one of
-the new toys that you've been working on. I want to hear the music it
-plays.'' (\emph{performance} condition); or ``That must be one of the
-new toys that you've been working on. How does it work?'' followed by
-the prompt ``\ldots{} {[}Imagine{]} you only had one chance to impress
-your boss and show that you're competent \ldots{}'' (\emph{presentation}
-condition). We asked participants to select an action they would like to
-try out on the toy in order to accomplish the specified goal, out of
-three possible actions: to ``press the button'', ``pull the handle'', or
-``press the button and pull the handle.'' We randomly assigned each
-participant to one of the three goal conditions, and randomized the
-order of actions to choose from.
+whether the toy was Toy 1, 2 or 3. We assigned participants into four
+goal conditions. For participants in \emph{learning},
+\emph{performance}, and \emph{presentation} conditions, we asked them to
+imagine that they were children's toy developers and that one day their
+boss approached them. We then instructed participants to: figure out the
+correct label for the toy (\emph{learning} condition); make the toy play
+music (or turn the light on; \emph{performance} condition); or impress
+their boss and show that they are competent (\emph{presentation}
+condition). In \emph{no-goal} condition, participants were asked to
+select an actio We asked participants to select an action they would
+like to try out on the toy in order to accomplish the specified goal,
+out of three possible actions: to ``press the button'', ``pull the
+handle'', or ``press the button and pull the handle.'' We randomly
+assigned each participant to one of the three goal conditions, and
+randomized the order of actions to choose from.
 
 \subsubsection{Procedure}\label{procedure}
 
-Participants were first introduced to the task with a picture of a toy
-with labels on its parts. Then they read instructions for each of the
-three toys, after which they were asked what they would do to make the
-toy operate as manipulation check (e.g. ``How would you make the toy
-play music?''). We asked participants to rate prior likelihood that an
-unknown toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight
-toy, to use as priors for our model. Participants then read a scenario
-for one of the three goal conditions, followed by the question: ``If you
-only had one chance to try a SINGLE action to {[}goal{]}, which action
-would you want to take? You will get a 10 cent bonus after submitting
-the HIT if you {[}goal{]}.'' After selecting one of three possible
-actions to perform on the toy and seeing that the toy successfully
-played music, participants were asked again to rate the likelihood that
-the unlabeled toy was each of the three possible toys. Our hypothesis
-and method were pre-registered prior to data collection on the Open
-Science Framework (\url{https://osf.io/kcjau}).
+We first introduced participants to the task, and showed them a picture
+of a possible toy with labels on its different parts. Then they read
+instructions for each of the three toy types. We presented Toy 1 and Toy
+2 instructions in a randomized order first, and then Toy 3 instructions.
+Afterwards, they were asked what they would do to make the toy operate
+as manipulation check (e.g. ``How would you make the toy play music?'').
+We asked participants to rate prior likelihood that an unknown toy is
+Toy 1, 2, or 3, to use as priors for our model. Participants then read a
+scenario for one of the three goal conditions, followed by the question:
+``If you only had one chance to try a SINGLE action to {[}pursue the
+specified goal{]}, which action would you want to take? You will get a
+10 cent bonus after submitting the HIT if you {[}achieve the given
+goal{]}.'' After selecting one of three possible actions to perform on
+the toy and seeing that the toy successfully played music, participants
+were asked again to rate the likelihood that the unlabeled toy was each
+of the three possible toys.
 
-\section{Results}\label{results}
+\subsection{Results}\label{results}
 
-\subsection{Action selections}\label{action-selections}
+\subsubsection{Behavioral results}\label{behavioral-results}
 
-\subsection{Response times}\label{response-times}
+\subsubsection{Model fitting}\label{model-fitting}
 
-\subsection{Entropy change}\label{entropy-change}
+\subsection{Discussion}\label{discussion}
 
-\section{Discussion}\label{discussion}
+\section{Experiment 2}\label{experiment-2}
+
+In Experiment 1, we saw that participants made different action choices
+depending on the goal conditions, as we previously predicted. In
+Experiment 2, we manipulated goals as well as social contexts, fully
+crossing the different goal conditions with the presence/absence of the
+boss, to see whether the social context affects people's decision making
+differently in each goal condition. We hypothesized that social pressure
+should increase presentation-oriented, immediately-rewarding actions in
+the learning and no-goal conditions, but not in the performance
+condition in which they are already specified a goal in the same
+direction.
+
+\subsection{Method}\label{method-1}
+
+\subsubsection{Stimuli and Design}\label{stimuli-and-design-1}
+
+The stimuli and design were identical to Experiment 1, except we had
+seven different goal \(\times\) social conditions. Goals remained
+identical to ones presented in Experiment 1; social conditions varied
+depending on whether the boss was present in the story (\emph{social})
+or she was absent (\emph{non-social}). Thus, the conditions from
+Experiment 1 were used as \emph{social-learning},
+\emph{social-performance}, \emph{social-presentation}, and
+\emph{non-social-no-goal} conditions in Experiment 2. We added three
+more conditions: \emph{non-social-learning},
+\emph{non-social-performance}, and \emph{social-no-goal}. Note that we
+did not have \emph{non-social-presentation} condition, because
+presentation goal by definition was to present oneself as competent to
+and impress another person.
+
+\subsubsection{Procedure}\label{procedure-1}
+
+The procedure was identical to Experiment 1.
+
+\subsection{Results}\label{results-1}
+
+\subsubsection{Action selections}\label{action-selections}
+
+\subsubsection{Response times}\label{response-times}
+
+\subsubsection{Entropy change}\label{entropy-change}
+
+\subsubsection{Model fitting}\label{model-fitting-1}
+
+\subsection{Discussion}\label{discussion-1}
+
+\section{General discussion}\label{general-discussion}
 
 \section{Acknowledgements}\label{acknowledgements}
 
